# aikon-api

./: .env.template  .gitignore  .gitmodules  README.md  install.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  run.sh  setup.sh
app/: main.py
app/config/: __init__.py  base.py  prod.py
app/dticlustering/: routes.py  tasks.py  training.py
app/dticlustering/templates/: base-conf.yml  kmeans-conf.yml  result-template.html  sprites-conf.yml
app/region_extraction/: __init__.py  const.py  region_extraction.py  routes.py  tasks.py
app/region_extraction/lib/: __init__.py  bbox.py  extract.py
app/region_extraction/lib/line_predictor/: README.md
app/region_extraction/lib/yolov5/: detect.py  export.py  pyproject.toml  val.py
app/regions/: const.py  regions.py  routes.py
app/regions/lib/: extract.py
app/regions/lib/line_predictor/: README.md
app/regions/lib/yolov5/: hubconf.py  requirements.txt  train.py
app/search/: const.py  routes.py  search.py  tasks.py  utils.py
app/shared/: const.py  routes.py  tasks.py
app/shared/dataset/: __init__.py  dataset.py  document.py  routes.py  types.py  utils.py
app/shared/utils/: __init__.py  fileutils.py  img.py  logging.py
app/similarity/: routes.py  similarity.py
app/similarity/lib/: const.py  features.py  models.py  segswap.py  utils.py  vit.py
app/vectorization/: routes.py  vectorization.py
app/watermarks/: const.py  routes.py  sources.py  tasks.py
docker/: Dockerfile  Dockerfile_  README.md  docker.sh  init.sh  start.sh  supervisord.conf.template  utils.sh
docs/source/: conf.py
(+23 files in other folders)
