[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "addict>=2.4.0",
    "cython>=3.2.4",
    "django-environ>=0.12.1",
    "dramatiq-abort[redis]>=1.2.1",
    "dramatiq[redis]>=2.0.1",
    "flask>=3.1.2",
    "fvcore>=0.1.5.post20221221",
    "httpx>=0.28.1",
    "huggingface-hub>=1.4.1",
    "hydra-core>=1.3.2",
    "iiif-download>=0.1.10",
    "kornia==0.7.*",
    "matplotlib>=3.10.8",
    "numpy>=1.26.4",
    "opencv-python>=4.11.0.86",
    "orjson>=3.11.7",
    "packaging>=26.0",
    "pandas>=2.3.3",
    "panopticapi",
    "pillow>=10.0.0",
    "pycocotools>=2.0.11",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "python-slugify>=8.0.4",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "scipy<1.13",
    "seaborn>=0.13.2",
    "stream-unzip>=0.0.99",
    "stream-zip>=0.0.84",
    "svg-path>=7.0",
    "svgwrite>=1.4.3",
    "termcolor>=3.3.0",
    "timm>=1.0.24",
    "torch>=2.2",
    "torchaudio>=2.10.0",
    "torchvision>=0.25.0",
    "tox>=4.36.0",
    "tqdm>=4.67.3",
    "ultralytics>=8.4.14",
    "yapf==0.3.1",
]

[tool.uv.sources]
panopticapi = { git = "https://github.com/cocodataset/panopticapi.git" }

[dependency-groups]
dev = [
    "dramatiq[redis,watch]>=2.0.1",
    "pre-commit>=4.5.1",
]
prod = [
    "gunicorn>=25.1.0",
]
